style: corrected select product size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,9 @@ body {
     .supplement-container {
         width: 25rem;
     }
+    .selectfont {
+        width: 10rem;
+    }
 }
 @media (max-width: 480px) {
     .container {
